<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/niebieski"
        android:gravity="center"
        android:text="@string/niebieski" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_weight="1"
        android:background="@color/czerw"
        android:gravity="center"
        android:text="@string/czerw" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/zolt"
        android:gravity="center"
        android:text="@string/zolt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_weight="1"
        android:background="@color/szar"
        android:gravity="center"
        android:text="@string/szar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@color/ziel"
        android:gravity="center"
        android:text="@string/ziel" />

</LinearLayout>
